--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,10 +21,10 @@ html
                     button.btn.btn-secondary.my-2.my-sm-0(type='submit') Search
 
         .container
-            //- != messages('message', locals)
-            //- if errors
-            //-     each error in errors
-            //-         div(class="alert alert-danger") #{error.msg}
+            != messages('message', locals)
+            if errors
+                each error in errors
+                    div(class="alert alert-danger error-message") #{error.msg}
             block content
             br
             hr
